packages/core/test/fixtures/validation/type-mismatch.pine
// @test validation/type-mismatch
// @description Type mismatch on variable assignment
// @expects parse: success
// @expects error: line=6, message=/Cannot assign a value of the .const string. type to the .x. variable/

//@version=6
indicator("Type Mismatch Tests")

// This should produce a type mismatch - assigning string to int
// (TV CE10173, probed 2026-06-05 - see INV032)
int x = "hello"

plot(close)
